// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders empty table 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table-filter-bar"
      >
        <div
          class="ant-table-filter-select"
        >
          <div
            class="ant-table-filter-select-icon"
          >
            <i
              class="icon icon-filter_list"
            />
          </div>
          <div
            class="ant-select ant-select-enabled ant-select-allow-clear ant-select-tags"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-select-selection
            ant-select-selection--multiple"
              role="combobox"
            >
              <div
                class="ant-select-selection__rendered"
              >
                <ul>
                  <li
                    class="ant-select-search ant-select-search--inline"
                  >
                    <div
                      class="ant-select-search__field__wrap"
                    >
                      <input
                        autocomplete="off"
                        class="ant-select-search__field"
                        value=""
                      />
                      <span
                        class="ant-select-search__field__mirror"
                      >
                         
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="ant-select-underline"
            >
              <span
                class="ant-select-ripple"
              />
            </div>
          </div>
          <div
            class="ant-table-filter-select-columns"
          />
        </div>
        <div
          class="ant-table-columns-chooser"
        >
          <button
            class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
            type="button"
          >
            <i
              class="icon icon-view_column"
            />
            <div
              class="ant-ripple-wrapper"
            />
          </button>
        </div>
      </div>
      <div
        class="ant-table ant-table-middle ant-table-empty ant-table-scroll-position-left"
      >
        <div
          class="ant-table-content"
        >
          <div
            class="ant-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 1
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 2
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 3
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 4
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 5
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 6
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 7
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 8
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              />
            </table>
          </div>
          <div
            class="ant-table-placeholder"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with custom emptyText 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table-filter-bar"
      >
        <div
          class="ant-table-filter-select"
        >
          <div
            class="ant-table-filter-select-icon"
          >
            <i
              class="icon icon-filter_list"
            />
          </div>
          <div
            class="ant-select ant-select-enabled ant-select-allow-clear ant-select-tags"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-select-selection
            ant-select-selection--multiple"
              role="combobox"
            >
              <div
                class="ant-select-selection__rendered"
              >
                <ul>
                  <li
                    class="ant-select-search ant-select-search--inline"
                  >
                    <div
                      class="ant-select-search__field__wrap"
                    >
                      <input
                        autocomplete="off"
                        class="ant-select-search__field"
                        value=""
                      />
                      <span
                        class="ant-select-search__field__mirror"
                      >
                         
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="ant-select-underline"
            >
              <span
                class="ant-select-ripple"
              />
            </div>
          </div>
          <div
            class="ant-table-filter-select-columns"
          />
        </div>
        <div
          class="ant-table-columns-chooser"
        >
          <button
            class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
            type="button"
          >
            <i
              class="icon icon-view_column"
            />
            <div
              class="ant-ripple-wrapper"
            />
          </button>
        </div>
      </div>
      <div
        class="ant-table ant-table-middle ant-table-empty ant-table-scroll-position-left"
      >
        <div
          class="ant-table-content"
        >
          <div
            class="ant-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 1
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 2
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 3
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 4
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 5
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 6
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 7
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 8
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              />
            </table>
          </div>
          <div
            class="ant-table-placeholder"
          >
            custom empty text 
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with fixed columns 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table-filter-bar"
      >
        <div
          class="ant-table-filter-select"
        >
          <div
            class="ant-table-filter-select-icon"
          >
            <i
              class="icon icon-filter_list"
            />
          </div>
          <div
            class="ant-select ant-select-enabled ant-select-allow-clear ant-select-tags"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-select-selection
            ant-select-selection--multiple"
              role="combobox"
            >
              <div
                class="ant-select-selection__rendered"
              >
                <ul>
                  <li
                    class="ant-select-search ant-select-search--inline"
                  >
                    <div
                      class="ant-select-search__field__wrap"
                    >
                      <input
                        autocomplete="off"
                        class="ant-select-search__field"
                        value=""
                      />
                      <span
                        class="ant-select-search__field__mirror"
                      >
                         
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="ant-select-underline"
            >
              <span
                class="ant-select-ripple"
              />
            </div>
          </div>
          <div
            class="ant-table-filter-select-columns"
          />
        </div>
        <div
          class="ant-table-columns-chooser"
        >
          <button
            class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
            type="button"
          >
            <i
              class="icon icon-view_column"
            />
            <div
              class="ant-ripple-wrapper"
            />
          </button>
        </div>
      </div>
      <div
        class="ant-table ant-table-middle ant-table-empty ant-table-scroll-position-left"
      >
        <div
          class="ant-table-content"
        >
          <div
            class="ant-table-scroll"
          >
            <div
              class="ant-table-body"
            >
              <table
                class=""
              >
                <colgroup>
                  <col
                    style="width:100px;min-width:100px"
                  />
                  <col
                    style="width:100px;min-width:100px"
                  />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col
                    style="width:100px;min-width:100px"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Full Name
                      </span>
                    </th>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Age
                      </span>
                    </th>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Column 1
                      </span>
                    </th>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Column 2
                      </span>
                    </th>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Column 3
                      </span>
                    </th>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Column 4
                      </span>
                    </th>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Column 5
                      </span>
                    </th>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Column 6
                      </span>
                    </th>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Column 7
                      </span>
                    </th>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Column 8
                      </span>
                    </th>
                    <th
                      class=""
                      tabindex="-1"
                    >
                      <span>
                        Action
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                />
              </table>
            </div>
            <div
              class="ant-table-placeholder"
            >
              No data
            </div>
          </div>
          <div
            class="ant-table-fixed-left"
          >
            <div
              class="ant-table-body-outer"
              style="-webkit-transform:translate3d (0, 0, 0)"
            >
              <div
                class="ant-table-body-inner"
              >
                <table
                  class="ant-table-fixed"
                >
                  <colgroup>
                    <col
                      style="width:100px;min-width:100px"
                    />
                    <col
                      style="width:100px;min-width:100px"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class=""
                        tabindex="-1"
                      >
                        <span>
                          Full Name
                        </span>
                      </th>
                      <th
                        class=""
                        tabindex="-1"
                      >
                        <span>
                          Age
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  />
                </table>
              </div>
            </div>
          </div>
          <div
            class="ant-table-fixed-right"
          >
            <div
              class="ant-table-body-outer"
              style="-webkit-transform:translate3d (0, 0, 0)"
            >
              <div
                class="ant-table-body-inner"
              >
                <table
                  class="ant-table-fixed"
                >
                  <colgroup>
                    <col
                      style="width:100px;min-width:100px"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class=""
                        tabindex="-1"
                      >
                        <span>
                          Action
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  />
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table without emptyText when loading 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin ant-spin-spinning ant-table-without-pagination ant-table-spin-holder"
    >
      <div
        class="ant-progress ant-progress-loading ant-progress-status-normal ant-progress-show-info ant-progress-default ant-spin-dot"
      >
        <div
          class="ant-progress-inner"
          style="width:30px;height:30px"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              fill="none"
              r="20"
              stroke="#3367d6"
              stroke-width="4"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        class="ant-table-filter-bar"
      >
        <div
          class="ant-table-filter-select"
        >
          <div
            class="ant-table-filter-select-icon"
          >
            <i
              class="icon icon-filter_list"
            />
          </div>
          <div
            class="ant-select ant-select-enabled ant-select-allow-clear ant-select-tags"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-select-selection
            ant-select-selection--multiple"
              role="combobox"
            >
              <div
                class="ant-select-selection__rendered"
              >
                <ul>
                  <li
                    class="ant-select-search ant-select-search--inline"
                  >
                    <div
                      class="ant-select-search__field__wrap"
                    >
                      <input
                        autocomplete="off"
                        class="ant-select-search__field"
                        value=""
                      />
                      <span
                        class="ant-select-search__field__mirror"
                      >
                         
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="ant-select-underline"
            >
              <span
                class="ant-select-ripple"
              />
            </div>
          </div>
          <div
            class="ant-table-filter-select-columns"
          />
        </div>
        <div
          class="ant-table-columns-chooser"
        >
          <button
            class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
            type="button"
          >
            <i
              class="icon icon-view_column"
            />
            <div
              class="ant-ripple-wrapper"
            />
          </button>
        </div>
      </div>
      <div
        class="ant-table ant-table-middle ant-table-empty ant-table-scroll-position-left"
      >
        <div
          class="ant-table-content"
        >
          <div
            class="ant-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 1
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 2
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 3
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 4
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 5
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 6
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 7
                    </span>
                  </th>
                  <th
                    class=""
                    tabindex="-1"
                  >
                    <span>
                      Column 8
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              />
            </table>
          </div>
          <div
            class="ant-table-placeholder"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
